--- a/src/style.css
+++ b/src/style.css
@@ -3,13 +3,14 @@
   padding: 0;
   box-sizing: border-box;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  background-color: #190038;
   }
 
 .header{
   text-align: center;
   margin: 40px;
   padding: 5px;
-  color: #46009a;
+  color: #ffffff;
 }
 
 .section {
@@ -20,7 +21,7 @@ margin: auto;
 margin-top: 60px;
 border-radius: 4px;
 font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-box-shadow: 2px 7px 10px #1d00415e;
+
 }
 
 /*.section__content{
@@ -30,14 +31,15 @@ box-shadow: 2px 7px 10px #1d00415e;
 .section__text{
   margin-bottom: 20px;
   color: #46009a;
+  background-color: #eeeeee;
  }
 
 .section__text--regular{
-  font-size: 18px;
+  font-size: 15px;
 }
 
 .section__text--big{
-  font-size: 22px;
+  font-size: 18px;
   
   }
 
@@ -46,15 +48,25 @@ box-shadow: 2px 7px 10px #1d00415e;
   margin-left: 5px;
   width: 20%;
   height: 30px;
-  background-color: #45009a25;
+  padding-left: 7px;
+  background-color:#45009a18;
+  border-color: #46009a;
+  border-radius: 4px;
   
 }
 
 .section__textbox{
+  padding-left: 5px;
+  padding-top: 5px;
   width: 100%;
   height: 50px;
   margin-bottom: 20px;
-  background-color:#ff00951e ;
+  background-color:#ff009511 ;
+  border-color: #d6007d;
+  border-width: 2px;
+  box-shadow:4px 4px #d6007d;
+
+
   
 }
 
@@ -62,11 +74,15 @@ box-shadow: 2px 7px 10px #1d00415e;
 width: 30%;
 height: 30px;
 margin-bottom: 30px;
+margin-right: 15px;
 background-color: #ff0096;
+border: none;
 color: #eeeeee;
 margin-top: 0;
 border-radius: 4px;
 font-size: small;
+font-weight: 500;
+box-shadow:2px 2px 5px #22004b;
 
 
 
